incubator/edx/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: helm-openedx
spec:
  rules:
  - host: weijie.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
      - backend:
          serviceName: nginx
          servicePort: 443
  
  - host: preview.weijie.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
      - backend:
          serviceName: nginx
          servicePort: 443
  
  - host: studio.weijie.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
      - backend:
          serviceName: nginx
          servicePort: 443
